k8s/manifest/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-service
  namespace: template_project
  labels:
    run: template-service
spec:
  replicas: 1
  selector:
    matchLabels:
      run: template-service
  template:
    metadata:
      labels:
        run: template-service
    spec:
      containers:
        - image: template-service
          imagePullPolicy: Never
          name: template-service
          #资源需求
          resources:
            requests:
              memory: 2G
            limits:
              memory: 2G
