k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-service-service
  namespace: template_project
#  labels:
#    test: test
#    labele2: label
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    run: template-service
  sessionAffinity: None
  type: ClusterIP
